--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.3",
+    "form-data": "^4.0.4",
+    "mailgun.js": "^12.0.3",
     "next": "^15.3.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
