--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint"
   },
   "author": "dJoshware",
-  "license": "MIT",
+  "private": "true",
+  "license": "UNLICENSED",
   "dependencies": {
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
