--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,30 @@
-name: Build, Push, and Mark Desired Image
+name: Build & Deploy (Docker Hub → EC2)
 
 on:
   push:
-    branches: [ prod ]   # runs when dev→prod merge lands
-  workflow_dispatch:      # allow manual runs
+    branches: [ prod ]
+  workflow_dispatch:
 
 permissions:
   contents: read
-  id-token: write
+
+concurrency:
+  group: prod-deploy
+  cancel-in-progress: false
 
 jobs:
-  build:
+  build_push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Derive version/tag
+      - name: Derive tag
         id: meta
-        shell: bash
         run: |
-          VERSION=$(node -p "require('./package.json').version")
-          SHORT_SHA=${GITHUB_SHA::7}
-          TAG="v${VERSION}-${SHORT_SHA}"
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
+          VERSION=$(node -p "require('./package.json').version" 2>/dev/null || echo "0.0.0")
+          echo "TAG=v${VERSION}-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -35,44 +32,82 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Build & Push image
+      - name: Build & push
         uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64
           push: true
           tags: |
-            ${{ vars.DOCKER_IMAGE }}:latest
-            ${{ vars.DOCKER_IMAGE }}:${{ steps.meta.outputs.tag }}
-          # Only if you bake NEXT_PUBLIC_* at build time
-          build-args: |
-            NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
-            NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+            ${{ vars.DOCKER_IMAGE }}:${{ steps.meta.outputs.TAG }}
+            ${{ vars.DOCKER_IMAGE }}:prod
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          # Only include build-args if your Next build needs public keys at build time
+          # build-args: |
+          #   NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          #   NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
 
-      # Use GitHub OIDC to AWS (better than static keys)
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+  deploy_ec2:
+    needs: build_push
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.3
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script_stop: true
+          script: |
+            set -e
+            APP_DIR="${{ secrets.APP_DIR }}"
+            IMAGE="${{ vars.DOCKER_IMAGE }}:prod"
 
-      - name: Write desired image & release notes to SSM
-        shell: bash
-        run: |
-          DESIRED="${{ vars.DOCKER_IMAGE }}:${{ steps.meta.outputs.tag }}"
-          aws ssm put-parameter \
-            --name "/shapeshifter/prod/desired_image" \
-            --type String --overwrite --value "$DESIRED"
+            sudo mkdir -p "$APP_DIR"
+            cd "$APP_DIR"
 
-          NOTES="$(git log -1 --pretty=format:'%s%n%n%b')"
-          aws ssm put-parameter \
-            --name "/shapeshifter/prod/release_notes" \
-            --type String --overwrite --value "$NOTES"
+            if ! command -v docker >/dev/null 2>&1; then curl -fsSL https://get.docker.com | sh; fi
+            if ! docker compose version >/dev/null 2>&1; then
+              DOCKER_CONFIG=${HOME}/.docker
+              mkdir -p $DOCKER_CONFIG/cli-plugins
+              curl -SL https://github.com/docker/compose/releases/download/v2.29.2/docker-compose-linux-x86_64 -o $DOCKER_CONFIG/cli-plugins/docker-compose
+              chmod +x $DOCKER_CONFIG/cli-plugins/docker-compose
+            fi
 
-      - name: (Optional) Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ steps.meta.outputs.tag }}
-          name: ${{ steps.meta.outputs.tag }}
-          body: ${{ steps.meta.outputs.version }} • ${{ github.event.head_commit.message }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            # login only if your repo is private
+            if [ -n "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" ]; then
+              echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin || true
+            fi
+
+            # ensure compose exists
+            if [ ! -f docker-compose.yml ]; then
+              cat > docker-compose.yml <<'YML'
+            services:
+              app:
+                image: REPLACE_IMAGE
+                container_name: shapeshifter
+                restart: unless-stopped
+                env_file:
+                  - /opt/shapeshifter/.env
+                ports:
+                  - "127.0.0.1:3000:3000"
+                healthcheck:
+                  test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+                  interval: 30s
+                  timeout: 5s
+                  retries: 5
+            YML
+            fi
+
+            sed -i "s|image: .*|image: ${IMAGE}|" docker-compose.yml
+            docker compose pull app
+            docker compose up -d --no-deps app
+
+            # smoke check through Nginx if present, else direct
+            if curl -fsS https://shapeshifter.djoshware.com -o /dev/null; then
+              echo "HTTPS OK"
+            else
+              curl -fsS http://localhost:3000/health
+            fi
