--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,11 +18,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Derive tag
-        id: meta
+      # Prebuild outside Docker for clearer errors
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+      - name: Install deps
+        run: npm ci
+      - name: Lint & build
         run: |
-          VERSION=$(node -p "require('./package.json').version" 2>/dev/null || echo "0.0.0")
-          echo "TAG=v${VERSION}-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+          npm run lint --if-present
+          npm run build
 
       - uses: docker/setup-buildx-action@v3
 
@@ -34,6 +40,9 @@ jobs:
 
       - name: Build & push
         uses: docker/build-push-action@v5
+        env:
+          DOCKER_BUILDKIT: 1
+          BUILDKIT_PROGRESS: plain
         with:
           context: .
           platforms: linux/amd64
