--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,8 +47,15 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
+          registry: docker.io
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Sanity push (canary)
+        run: |
+          docker pull hello-world
+          docker tag hello-world ${{ vars.DOCKER_IMAGE }}:canary-${GITHUB_RUN_NUMBER}
+          docker push ${{ vars.DOCKER_IMAGE }}:canary-${GITHUB_RUN_NUMBER}
 
       - name: Build & push
         uses: docker/build-push-action@v5
