--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,6 +88,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script_stop: true
+          debug: true
           script: |
             set -e
             APP_DIR="${{ secrets.APP_DIR }}"
@@ -127,31 +128,56 @@ jobs:
                 ports:
                   - "127.0.0.1:3000:3000"
                 healthcheck:
-                  test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+                  test: ["CMD-SHELL", "node -e \"http=require('http');http.get('http://127.0.0.1:3000/',r=>process.exit(r.statusCode<500?0:1)).on('error',()=>process.exit(1))\""]
                   interval: 30s
                   timeout: 5s
                   retries: 5
+                  start_period: 10s
             YML
             fi
 
-            sed -i "s|image: .*|image: ${IMAGE}|" docker-compose.yml
-            docker compose pull app
-            docker compose up -d --no-deps app
+            # Make sure the image tag is current
+            sed -i "s|^\\s*image:.*$|    image: ${IMAGE}|" docker-compose.yml
+
+            # Pull latest image & bring it up (idempotent)
+            sudo docker compose -f docker-compose.yml pull app || true
+            sudo docker compose -f docker-compose.yml up -d --no-deps --force-recreate app
 
             # Smoke check through Nginx if present, else direct
-            echo "Waiting for container health..."
+            echo "Waiting for container to appear..."
             for i in $(seq 1 30); do
-              STATUS=$(sudo docker inspect --format '{{.State.Health.Status}}' shapeshifter 2>/dev/null || echo "starting")
-              if [ "$STATUS" = "healthy" ]; then
-                echo "Container healthy."
+              CID=$(sudo docker ps -qf name=^/shapeshifter$ || true)
+              [ -n "$CID" ] && { echo "Container: $CID"; break; }
+              sleep 2
+              [ $i -eq 30 ] && { echo "Container didn't start"; sudo docker compose -f docker-compose.yml logs --tail=200 app || true; exit 1; }
+            done
+
+            HAS_HEALTH=$(sudo docker inspect shapeshifter --format '{{if .State.Health}}yes{{end}}' 2>/dev/null || true)
+            if [ "$HAS_HEALTH" = "yes" ]; then
+              echo "Waiting for Docker health=healthy..."
+              for i in $(seq 1 45); do
+                STATUS=$(sudo docker inspect shapeshifter --format '{{.State.Health.Status}}' 2>/dev/null || echo "unknown")
+                echo "  health: $STATUS"
+                [ "$STATUS" = "healthy" ] && break
+                sleep 2
+                [ $i -eq 45 ] && echo "Health still '$STATUS'; continuing to HTTP probe."
+              done
+            else
+              echo "No healthcheck defined; skipping Docker health wait."
+            fi
+
+            echo "Probing app on localhost:3000..."
+            for i in $(seq 1 30); do
+              if curl -fsS http://127.0.0.1:3000/ -o /dev/null; then
+                echo "App responds locally."
                 break
               fi
               sleep 2
-              [ $i -eq 30 ] && { echo "Container never became healthy"; sudo docker compose logs --tail=200 app; exit 1; }
+              [ $i -eq 30 ] && { echo "App never responded locally"; sudo docker compose -f docker-compose.yml logs --tail=200 app || true; exit 1; }
             done
 
             echo "Checking through Nginx (HTTPS)..."
-            for i in $(seq 1 10); do
+            for i in $(seq 1 20); do
               if curl -fsS https://shapeshifter.djoshware.com -o /dev/null; then
                 echo "HTTPS OK"
                 exit 0
@@ -160,5 +186,5 @@ jobs:
             done
 
             echo "HTTPS still failing; nginx errors:"
-            sudo tail -n 100 /var/log/nginx/error.log
+            sudo tail -n 120 /var/log/nginx/error.log || true
             exit 1
